finished step 3 smoke test