@@ -28,20 +28,31 @@
 
 package org.opennms.smoketest.rest;
 
-import org.json.JSONObject;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.junit.ClassRule;
 import org.junit.Test;
+import org.opennms.core.criteria.Criteria;
+import org.opennms.core.criteria.CriteriaBuilder;
 import org.opennms.features.newgui.rest.model.IPAddressScanRequestDTO;
+import org.opennms.features.newgui.rest.model.ProvisioningRequestDTO;
 import org.opennms.features.newgui.rest.model.SNMPConfigDTO;
 import org.opennms.features.newgui.rest.model.SNMPFitRequestDTO;
 import org.opennms.features.newgui.rest.model.SNMPFitResultDTO;
 import org.opennms.features.newgui.rest.model.ScanResultDTO;
+import org.opennms.netmgt.dao.api.EventDao;
+import org.opennms.netmgt.dao.hibernate.EventDaoHibernate;
+import org.opennms.netmgt.events.api.EventConstants;
+import org.opennms.netmgt.model.OnmsEvent;
 import org.opennms.smoketest.stacks.OpenNMSStack;
+import org.opennms.smoketest.utils.DaoUtils;
+import org.opennms.smoketest.utils.HibernateDaoFactory;
 
+import static com.jayway.awaitility.Awaitility.await;
 import static io.restassured.RestAssured.given;
 import static io.restassured.RestAssured.preemptive;
+import static java.util.concurrent.TimeUnit.MINUTES;
+import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.greaterThanOrEqualTo;
 import static org.hamcrest.Matchers.is;
@@ -52,11 +63,11 @@ import static org.opennms.smoketest.selenium.AbstractOpenNMSSeleniumHelper.BASIC
 import static org.opennms.smoketest.selenium.AbstractOpenNMSSeleniumHelper.BASIC_AUTH_USERNAME;
 
 import java.util.Arrays;
+import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import io.restassured.RestAssured;
@@ -70,15 +81,13 @@ public class NewRestAPIIT {
     private static final String PATH_PROVISION = BASE_PATH + "/provision";
 
     @ClassRule
-    public static final OpenNMSStack statck = OpenNMSStack.MINIMAL;
+    public static final OpenNMSStack stack = OpenNMSStack.MINIMAL;
     private static ObjectMapper jsonMapper;
 
     @BeforeClass
     public static void setupGlobal() {
-        RestAssured.baseURI = statck.opennms().getBaseUrlExternal().toString();
-        RestAssured.port = statck.opennms().getWebPort();
-        /*RestAssured.baseURI = "http://localhost";
-        RestAssured.port = 8980;*/
+        RestAssured.baseURI = stack.opennms().getBaseUrlExternal().toString();
+        RestAssured.port = stack.opennms().getWebPort();
         RestAssured.authentication = preemptive().basic(BASIC_AUTH_USERNAME, BASIC_AUTH_PASSWORD);
         jsonMapper = new ObjectMapper();
     }
@@ -91,17 +100,12 @@ public class NewRestAPIIT {
     @Test
     public void testScan() throws JsonProcessingException {
         RestAssured.basePath = PATH_SCAN;
-        IPAddressScanRequestDTO requestDTO = new IPAddressScanRequestDTO();
-        requestDTO.setLocation("Default");
-        requestDTO.setStartIP("127.0.0.1");
-        requestDTO.setEndIP("127.0.0.3");
-        List<IPAddressScanRequestDTO> dtoList = Arrays.asList(requestDTO);
+        IPAddressScanRequestDTO requestDTO = createIPRange();
+        List<IPAddressScanRequestDTO> dtoList = List.of(requestDTO);
         String requestData = jsonMapper.writeValueAsString(dtoList);
-
         List<ScanResultDTO> resultData = given().body(requestData).contentType(ContentType.JSON).post()
                 .then().statusCode(200)
                 .extract().body().jsonPath().getList("." , ScanResultDTO.class);
-
         assertThat(resultData.size(), is(1));
         ScanResultDTO resultDTO = resultData.get(0);
         assertThat(resultDTO.getLocation(), is(requestDTO.getLocation()));
@@ -117,6 +121,56 @@ public class NewRestAPIIT {
     @Test
     public void testDetect() throws JsonProcessingException {
         RestAssured.basePath = PATH_DETECT;
+        SNMPFitRequestDTO requestObj = createSnmpFitRequestDTO();
+        String requestData = jsonMapper.writeValueAsString(List.of(requestObj));
+        List<SNMPFitResultDTO> result = given().body(requestData).contentType(ContentType.JSON).post()
+                .then().statusCode(200)
+                .extract().body().jsonPath().getList(".", SNMPFitResultDTO.class);
+        assertThat(result.size(), is(4));
+        List<String> communityList = requestObj.getConfigurations().stream().map(SNMPConfigDTO::getCommunityString).collect(Collectors.toList());
+        result.forEach(r -> {
+            assertThat(r.getLocation(), is(requestObj.getLocation()));
+            assertThat(requestObj.getIpAddresses().contains(r.getIpAddress()), is(true));
+            assertThat(r.getHostname(), notNullValue());
+        });
+    }
+
+    @Test
+    public void testProvisioning() throws JsonProcessingException {
+        Date startOfTest = new Date();
+        RestAssured.basePath = PATH_PROVISION;
+        ProvisioningRequestDTO requestDTO = new ProvisioningRequestDTO();
+        requestDTO.setBatchName("test_batch");
+        requestDTO.setScheduleTime(System.currentTimeMillis());
+        requestDTO.setDiscoverIPRanges(List.of(createIPRange()));
+        requestDTO.setSnmpConfigList(List.of(createSnmpFitRequestDTO()));
+        String requestData = jsonMapper.writeValueAsString(requestDTO);
+        Response response = given().body(requestData).contentType(ContentType.JSON).post();
+        assertThat(response.statusCode(), is(200));
+        String result = response.asString();
+        assertThat(result, is("Provisioning request was submitted succeed."));
+
+        HibernateDaoFactory daoFactory = stack.postgres().getDaoFactory();
+        EventDao eventDao = daoFactory.getDao(EventDaoHibernate.class);
+
+        Criteria criteria = new CriteriaBuilder(OnmsEvent.class)
+                .eq("eventUei", EventConstants.NEW_SUSPECT_INTERFACE_EVENT_UEI)
+                .ge("eventTime", startOfTest)
+                .toCriteria();
+
+        await().atMost(1, MINUTES).pollInterval(10, SECONDS)
+                .until(DaoUtils.countMatchingCallable(eventDao, criteria), greaterThan(0));
+    }
+
+    private IPAddressScanRequestDTO createIPRange() {
+        IPAddressScanRequestDTO requestDTO = new IPAddressScanRequestDTO();
+        requestDTO.setLocation("Default");
+        requestDTO.setStartIP("127.0.0.1");
+        requestDTO.setEndIP("127.0.0.3");
+        return requestDTO;
+    }
+
+    private SNMPFitRequestDTO createSnmpFitRequestDTO() {
         SNMPFitRequestDTO requestObj = new SNMPFitRequestDTO();
         requestObj.setLocation("Default");
         requestObj.setIpAddresses(Arrays.asList("127.0.0.1", "127.0.0.2"));
@@ -132,17 +186,7 @@ public class NewRestAPIIT {
         config2.setTimeout(300);
         config2.setSecurityLevel(1);
         requestObj.setConfigurations(Arrays.asList(config1, config2));
-        String requestData = jsonMapper.writeValueAsString(Arrays.asList(requestObj));
-
-        List<SNMPFitResultDTO> result = given().body(requestData).contentType(ContentType.JSON).post()
-                .then().statusCode(200)
-                .extract().body().jsonPath().getList(".", SNMPFitResultDTO.class);
-        assertThat(result.size(), is(4));
-        List<String> communityList = requestObj.getConfigurations().stream().map(req->req.getCommunityString()).collect(Collectors.toList());
-        result.forEach(r -> {
-            assertThat(r.getLocation(), is(requestObj.getLocation()));
-            assertThat(requestObj.getIpAddresses().contains(r.getIpAddress()), is(true));
-            assertThat(r.getHostname(), notNullValue());
-        });
+        return requestObj;
     }
+
 }
